# chess

./: Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  Common.h  Main.cpp  Piece.cpp  Piece.h  README.md
include/: Board.h  Chess.h  Common.h  Piece.h
src/: Board.cpp  Chess.cpp  Main.cpp  Piece.cpp
x64/Release/: Chess.exe.recipe  Chess.iobj  Chess.ipdb  Chess.vcxproj.FileListAbsolute.txt
x64/Release/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
